public/css/gsdk.css
/* ... */
.tour-tab-content {
  margin-top: -2px;
}
.top-form-wrapper {
  position: absolute;
  top: 5%;
  width: 100%;
}
.top-form-header {
	background-color: #152ac3;
	color:#fff;
	padding:10pt;
	text-align:center;
}
.bootstrap-select > .dropdown-toggle {
  width: 100%;
  padding-right: 10px;
  z-index: 1;
}
.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
	width:100%;
}
.registration-details-row {
	margin:30pt 0;
}
.summary-card {

}
.summary-card-header {
	background: #003aa0;
  text-align: center;
  color: #fff;
  font-size: 13pt;
  padding: 10pt 0;
  border-radius: 10px 10px 0 0;
	}
.summary-card-content {

}
.summary-card-content h5 {
	color:#003aa0;
	font-family: 'UTM Avo Regular', Arial, sans-serif;
}
.summary-card-content h5 b {
	font-family: 'UTM Avo Bold', Arial, sans-serif;
}
.details-form-title {
	color:#f34d00;
	text-align:center;
	position:relative;
	padding-bottom:10pt;
}
.details-form-title::after {
  display: block;
  content: '';
  width: 40%;
  height: 1px;
  background: #f34d00;
  position: absolute;
  margin-left: 30%;
  bottom: 0;
}
.details-form-subtitle {
	color:#003aa0;
	text-align:center;
}
.summary-card-content.content {
    border: 2px solid #0035a2;
    border-radius: 0 0 5px 5px;
}
.summary-card-content h5.summary-total {
	background: #003aa0;
	color: #fff;
	text-align: center;
	display: block;
	padding: 10pt 0;
}
#doBack a {
	color:#fff;
}
.payment-note h5 {
	color:#003aa0;
}
.thank-you-background .summary-card-content.content {

}
.tour-card-title {
	margin-bottom:10pt;
}
.card-user.card-tour .author {
	text-align: center;
	text-transform: none;
	margin-top: -150px;
}
.card-user.card-tour .avatar {
    width: 250px;
    height: 250px;
    border: 5px solid #FFFFFF;
    position: relative;
    margin-bottom: 15px;
}
.tour-card-title h4.title,
.card-user.card-tour.normal-tour h4.title {
	color:#003aa0;
	font-size:9pt;
	text-align:left;
	font-family: 'UTM Avo Bold', Arial, sans-serif;
}
.tour-meta span {
	font-size:13pt;
	color:#f34d00;
}
.tours-grid {
	margin-top:70pt;
}
.card-user.card-tour .content {
	background:#d4efff;
}
.card-user.card-tour.normal-tour .content {
    min-height: 190px;
}
.card-user.card-tour.normal-tour .image {
    height: 280px;
}
.card-user.card-tour.normal-tour .tour-meta {
	background:#f34d00;
	padding:5pt;
}
.card-user.card-tour.normal-tour .tour-meta span {
	color:#fff;
}
#hcm-tours .tours-grid,
#hn-tours .tours-grid {
    margin-top: 10pt;
}
.japan-explore img,
.japan-cuisine img {
    max-width: 100%;
    height: auto;
}
.explore-nature {
	margin:30pt 0;
}
h3.explore-title,
h3.cuisine-title,
h3.contact-title {
	color: #f34d00;
	line-height: 1.5em;
	position:relative;
	padding-bottom: 10pt;
	float:left;
	width:100%;
	clear:both;
}
h3.explore-title span,
h3.cuisine-title span,
h3.contact-title span {
	font-family: 'UTM Avo Bold', Arial, sans-serif;
}
.explore-text {
	float:left;
}
#explore-thumbnails {
	margin-top:30pt;
}
#explore-thumbnails a {
	display: block;
	float:left;
	width:30%;
	margin-right:1%;
	margin-bottom:1%;
}
#explore-thumbnails img {
	width:100%;
	height:auto;
}
.japan-cuisine {
  position: relative;
}
.cuisine-content {
	position: absolute;
	top:10pt;
	width:100%;
	height:100%;
}
.cuisine-text {
    width: 73%;
}
.cuisine-text p {
  color: #fff;
  font-size: 14px;
}
h5.branch-title {
	font-family: 'UTM Avo Bold', Arial, sans-serif;
	font-size:11pt;
}
.home-contact {
	margin-bottom: 30pt;
}
.home-contact ul {
    padding-left: 20px;
}
.office-wrap {
    padding: 10px;
    border: 1px solid #666;
}
.office-row {
	margin-top:10pt;
}
.sale-info img {
    width: 70px;
    height: 70px;
}
.sale-info {
    position: absolute;
    top: 0;
    right: 15px;
    z-index: 10;
}
h3.sale-text {
	color: #003aa0;
}
h3.sale-text strong {
	color:#f00;
}
#all-tours {
	margin:20pt auto;
}
#all-tours .tours-grid {
	margin-top:0;
}
.form-group .error {
    color: #f00;
}
form#registration-init-form .form-control {
    font-size: 12px;
    height: 35px;
}
.header-banner {
		height: 350px;
		background-size: 100% 100%;
		position: relative;
}
.header-banner.all-tours-banner,
.header-banner.home-banner {
		height: 450px;
}
.header-banner.short-banner {
	height:285px;
}
body > .navbar-collapse::after {
    background-color: #b33a3a;
}
body > .navbar-collapse .nav > li {
    border-bottom: 1px solid #e7eafa;
}
body > .navbar-collapse .navbar-nav > li > a, body > .navbar-collapse .navbar-nav > li > a:hover, body > .navbar-collapse .navbar-nav > li > a:focus, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a:hover, body > .navbar-collapse .navbar-nav .open .dropdown-menu > li > a:focus {
	opacity:1;
}
@media screen and (min-width: 768px) {
  .navbar-right {
      float: right!important;
      margin-right: -15px;
      margin-top: 10px;
  }
  .carousel-caption {
    left: auto;
    right: auto;
  }
  .carousel-indicators {
    bottom: 0;
  }
	.tour-card-title h4.title, .card-user.card-tour.normal-tour h4.title {
		font-size:12pt;
	}
}
@media screen and (max-width: 991px) {

	form#registration-init-form .form-control {
		margin-bottom:5px;
	}
	.form-group {
    margin-bottom: 0;
	}
	.header-banner {
		height: 351px;
		background-size: cover;
	}
	div#featured-tours .tours-grid {
		margin-top:0;
	}
	div#featured-tours .tours-grid > div[class^="col"] {
    margin-top: 30px;
	}
	.cuisine-content {
    position: relative;
    top: 0;
    width: 100%;
    height: auto;
	}
	.cuisine-text {
		width:100%;
	}
	.cuisine-text p {
		color:#666
	}
	.row.office-row > div[class^="col-"] {
    margin-bottom: 15px;
	}
}
@media screen and (max-width: 820px) {
	.navbar .navbar-nav > li > a {
	    margin: 10px 0;
	}
}
/* ... */

